# Dronesoft

./: .clang-format  .clang-format-注释版本  .gitignore  CMakeLists.txt
bin_windows/theme/: TaskItemWidget.qss
doc/: aru_mission_planner.html
skills/: Qt_QSS样式表指南_参照CSDN_WL0616整理.md  Qt代码命名规则.md  Qt代码注释规则.md  Qt代码风格规则.md  Qt控件样式表规则.md  Qt控件缩写规则.md
source/: AddOrEditTaskplan.cpp  AddOrEditTaskplan.h  AddOrEditTaskplan.ui  CMakeLists.txt  ForceRequirementPanel.cpp  ForceRequirementPanel.h  ForceRequirementPanel.ui  MissionPlanner.cpp  MissionPlanner.h  MissionPlanner.ui  MissionPlannerTheme.cpp  MissionPlannerTheme.h  ParameterLoading.cpp  ParameterLoading.h  ParameterLoading.ui  PathDisplayDialog.cpp  PathDisplayDialog.h  PathDisplayDialog.ui  RightSidePanel.cpp  RightSidePanel.h  RoutePlanning.cpp  RoutePlanning.h  RoutePlanning.ui  StructData.h  TaskAllocationPanel.cpp  TaskAllocationPanel.h  TaskAllocationPanel.ui  TaskListWidget.cpp  TaskListWidget.h  TaskPlanningData.h  TaskPlanningTypeConvert.h  WindowStyle.cpp  WindowStyle.h  main.cpp
source/01-TaskPlan/: RZSetTaskPlan.cpp  RZSetTaskPlan.h  RZSetTaskPlan.ui  RZTaskListWidget.cpp  RZTaskListWidget.h  RZTaskListWidget.ui  SetAreaTargetEditDialog.cpp  SetAreaTargetEditDialog.h  SetAreaTargetEditDialog.ui  SetPointTargetEditDialog.cpp  SetPointTargetEditDialog.h  SetPointTargetEditDialog.ui  TaskItemWidget.cpp  TaskItemWidget.h  TaskItemWidget.ui
source/PathAlgorithm/: main_demo.cpp  path_planner.cpp  path_planner.h
source/theme/: mission_planner_theme.qss
